--- a/frontEnd/employeemanagement/src/app/comp/add-student/add-student.component.html
+++ b/frontEnd/employeemanagement/src/app/comp/add-student/add-student.component.html
@@ -4,10 +4,13 @@
       <mat-card-title>Add Student Form</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <div class="row">
+      <div class="row"> 
         <div class="col">
           <mat-form-field class="full-width">
-            <input matInput placeholder="Student ID" formControlName="id">
+            <input matInput placeholder="Student Id" formControlName="id">
+            @if (addressForm.controls['id'].hasError('required')) {
+            <mat-error> StudentId is <strong>required</strong></mat-error>
+            }
           </mat-form-field>
         </div>
         <div class="col">
@@ -18,9 +21,6 @@
             }
           </mat-form-field>
         </div>
-      </div>
-      <div class="row">
-      
       </div>
 
       <div class="row">
