--- a/frontEnd/employeemanagement/src/app/student/student-list/student-list.component.html
+++ b/frontEnd/employeemanagement/src/app/student/student-list/student-list.component.html
@@ -1,4 +1,6 @@
 <p>student-list works!</p>
 <div *ngFor="let student of studentList">
-    <li>{{student}}</li>
+    <li>{{student.name}}</li>
+    <li>{{student.email}}</li>
+    <li>{{student.phoneNumber}}</li>
 </div>
